Оформлено мобильное меню для экрана до 480 (кроме кнопки меню)

--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -1,11 +1,5 @@
-* {
-  outline: 1px solid #000;
-}
-
-// .header-button {
-//   @extend .btn;
-//   @extend .btn--arrow-invert;
-//   margin-top: 60px;
+// * {
+//   outline: 1px solid #000;
 // }
 
 .header {
@@ -44,8 +38,6 @@
   top: 0;
   left: 0;
   width: 100%;
-  // padding-left: 21px;
-  // padding-right: 21px;
   z-index: 2;
 
   &.is-open {
@@ -61,4 +53,45 @@
   margin-left: 21px;
   margin-right: 21px;
   margin-top: 60px;
+}
+
+.header-navigation-list {
+  list-style-type: none;
+  padding: 0;
+  margin-top: 21px;
+}
+
+.header-navigation-list-item {
+  position: relative;
+  padding-top: 12px;
+  padding-bottom: 12px;
+
+  &::before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    height: 1px;
+    background-color: #e18298;
+  }
+
+  &:last-child::after {
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    height: 1px;
+    background-color: #e18298;
+  }
+}
+
+.header-navigation-link {
+  text-decoration: none;
+  font-size: 14px;
+  line-height: 1.28;
+  font-weight: 700;
+  color: #fff;
+  margin-left: 21px;
 }
