--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,13 +2,13 @@
 <div class="header">
         <img src="./images/logo.png" alt="логотип" class="logo">
         <div class="menu-container" id="menu-container" data-menu>
-            <nav>
-                <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">About us</a></li>
-                    <li><a href="">How it’s made?</a></li>
-                    <li><a href="">Our products</a></li>
-                    <li><a href="">Contact</a></li>
+            <nav class="header-navigation">
+                <ul class="header-navigation-list">
+                    <li class="header-navigation-list-item"><a href="" class="header-navigation-link">Home</a></li>
+                    <li class="header-navigation-list-item"><a href="" class="header-navigation-link">About us</a></li>
+                    <li class="header-navigation-list-item"><a href="" class="header-navigation-link">How it’s made?</a></li>
+                    <li class="header-navigation-list-item"><a href="" class="header-navigation-link">Our products</a></li>
+                    <li class="header-navigation-list-item"><a href="" class="header-navigation-link">Contact</a></li>
                 </ul>
             </nav>
             <button type="button" class="header-button">Buy now</button>
