--- a/src/sass/utils/_vars.scss
+++ b/src/sass/utils/_vars.scss
@@ -16,12 +16,14 @@ $secondary-accent-color: #ffa5ba;
 
 $primary-body-color: #ffffff;
 $secondary-body-color: #fff5f6;
+$third-body-color: #E5E5E5;
 
 $first-bg-color: #ffb8ca;
 $second-bg-color: #f0d1a5;
 $third-bg-color: #c2e297;
 $comments-bg-color: #fafafa;
 $side-menu-bg-color: #e17992;
+$pseudo-element-color: #E1E1E1;
 
 // $primary-text-color: #FFFFFF;
 // - навигация в хедере;
@@ -86,6 +88,11 @@ $side-menu-bg-color: #e17992;
 
 // ________________________________________________________
 
+// $third-body-color: #E5E5E5; - используется:
+// - backround секции Customer Reviews;
+// - backround части секции Contacts.
+// ___________________________________________________________
+
 // $first-bg-color: #FFB8CA; - используется:
 // - background секции Hero;
 // - background карточки в секции Products.
@@ -111,3 +118,10 @@ $side-menu-bg-color: #e17992;
 
 // $side-menu-bg-color: #E17992; - используется:
 // - background для меню навигации на мобилке и планшете.
+
+
+//  ________________________________________________________
+//  $pseudo-element-color: #E1E1E1; - используется: 
+//  - секция Contact цвет полос подчеркивания.
+//  ________________________________________________________
+ 
