--- a/src/sass/utils/_fonts.scss
+++ b/src/sass/utils/_fonts.scss
@@ -1,19 +1,23 @@
 @font-face {
-    font-family: "DMSans-Bold";
+    font-family: "DMSans";
     src: url(../fonts/DM_Sans/DMSans-Bold.ttf);
+    font-weight: 700;
 }
 
 @font-face {
-    font-family: "DMSans-Medium";
+    font-family: "DMSans";
     src: url(../fonts/DM_Sans/DMSans-Medium.ttf);
+    font-weight: 500;
 }
 
 @font-face {
-    font-family: "DMSans-Regular";
+    font-family: "DMSans";
     src: url(../fonts/DM_Sans/DMSans-Regular.ttf);
+    font-weight: 400;
 }
 
 @font-face {
-    font-family: "TitanOne-Regular";
+    font-family: "TitanOne";
     src: url(../fonts/Titan_One/TitanOne-Regular.ttf);
+    font-weight: 400;
 }
