додав стилі на кнопки

--- a/src/sass/layouts/_contacts.scss
+++ b/src/sass/layouts/_contacts.scss
@@ -1,4 +1,5 @@
 .contact-section {
+    
     @media  screen and (max-width: 767px) {
    
     background-image: linear-gradient($third-body-color 12%, $secondary-body-color 12%);
@@ -11,6 +12,7 @@
     @include for-desktop {
         background-image: linear-gradient($third-body-color 28%, $secondary-body-color 28%);
     }    
+    
 }
 
 
@@ -191,29 +193,15 @@
     }
 }
 
-.btn {
 
-    display: block;   
-    width: 161px;
-
-    padding-top: 20px;
-    padding-bottom: 20px;
-    
-    border-style: none;
-    background-color: $primary-body-color;
-    
-    border-radius: 22px;
-    color: $primary-accent-color;
-    font-size: 16px;
-
-    @media  screen and (max-width: 767px) {
+.contact-btn {
+    display: block;  
+        @media  screen and (max-width: 767px) {
         margin-right: auto;
         margin-left: auto;
     }
- 
 }
-
-.btn:not(:last-child) {
+.contact-btn:not(:last-child) {
     @media  screen and (max-width: 767px) {
         margin-top: 25px;
         margin-bottom: 10px;
@@ -225,3 +213,4 @@
     background-color: $primary-accent-color;
     color: $primary-text-color;
 }
+
