add id for products

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,5 +1,5 @@
 
-<section class="section products">
+<section id="products" class="section products">
   <div class="container">
     <p class="products__label">100% natural</p>
     <h2 class="products__title">products</h2>
