--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -1,9 +1,9 @@
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-  outline: 1px solid red;
-}
+// *,
+// *::before,
+// *::after {
+//   box-sizing: inherit;
+//   outline: 1px solid red;
+// }
 
 .products {
   font-family: Titan One;
