add overlay for products

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -11,6 +11,11 @@
           ut labore et. dolore magna aliqua facilisis.
         </p>
         <button class="btn btn--more" type="button"></button>
+        <div class="products__overlay">
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, atque.
+          </p>
+        </div>
       </li>
       <li class="products__item">
         <h3 class="products__name">ice coffee</h3>
@@ -19,6 +24,11 @@
           ut labore et. dolore magna aliqua facilisis.
         </p>
         <button class="btn btn--more" type="button"></button>
+        <div class="products__overlay">
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque ipsa aut distinctio reprehenderit, facilis unde.
+          </p>
+        </div>
       </li>
       <li class="products__item">
         <h3 class="products__name">milkshakes</h3>
@@ -27,6 +37,12 @@
           ut labore et. dolore magna aliqua facilisis.
         </p>
         <button class="btn btn--more" type="button"></button>
+        <div class="products__overlay">
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus commodi qui laudantium illo praesentium ad tenetur unde rerum itaque asperiores.
+          </p>
+          <button class="btn btn--back" type="button"></button>
+        </div>
       </li>
     </ul>
   </div>
