--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,10 +4,11 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './base/base';
 @import './utils/fonts';
 @import './utils/vars';
 @import './utils/mixins';
+@import './utils/placeholders';
 @import './utils/utils-classes';
+@import './base/base';
 @import './layouts/products';
 @import './layouts/customer_reviews';
