--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -11,10 +11,11 @@
           ut labore et. dolore magna aliqua facilisis.
         </p>
         <button class="btn btn--more" type="button"></button>
-        <div class="products__overlay">
+        <div class="products__overlay is-hidden" data-product>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, atque.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus commodi qui laudantium illo praesentium ad tenetur unde rerum itaque asperiores.
           </p>
+          <button class="btn btn--back" type="button" data-product-close></button>
         </div>
       </li>
       <li class="products__item">
@@ -24,10 +25,11 @@
           ut labore et. dolore magna aliqua facilisis.
         </p>
         <button class="btn btn--more" type="button"></button>
-        <div class="products__overlay">
+        <div class="products__overlay is-hidden" data-product>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque ipsa aut distinctio reprehenderit, facilis unde.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus commodi qui laudantium illo praesentium ad tenetur unde rerum itaque asperiores.
           </p>
+          <button class="btn btn--back" type="button" data-product-close></button>
         </div>
       </li>
       <li class="products__item">
@@ -36,15 +38,16 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
           ut labore et. dolore magna aliqua facilisis.
         </p>
-        <button class="btn btn--more" type="button"></button>
-        <div class="products__overlay">
+        <button class="btn btn--more" type="button" data-product-open></button>
+        <div class="products__overlay is-hidden" data-product>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus commodi qui laudantium illo praesentium ad tenetur unde rerum itaque asperiores.
           </p>
-          <button class="btn btn--back" type="button"></button>
+          <button class="btn btn--back" type="button" data-product-close></button>
         </div>
       </li>
     </ul>
   </div>
 </section>
+
 
