--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -136,14 +136,6 @@
     max-width: 249px;
     height: 252px;
     background-size: cover;
-
-    @include for-tablet {
-      margin-bottom: 30px;
-    }
-
-    @include for-desktop {
-      margin-bottom: 38px;
-    }
   }
 
   &::after {
@@ -262,5 +254,18 @@
   &:hover,
   &:focus {
     background-color: #ecebeb;
+  }
+}
+
+.products__overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  // opacity: 1;
+
+  &.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
   }
 }
