Продолжаю добавлять стили

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
 
 <div class="header">
-        <img src="./images/logo.png" alt="логотип" class="logo">
+        <img src="./images/logo.png" alt="логотип" class="logo" >
         <div class="menu-container" id="menu-container" data-menu>
             <nav class="header-navigation">
                 <ul class="header-navigation-list">
@@ -19,5 +19,6 @@
                 <use href="./images/sprite.svg#icon-close" class="icon-close"></use>
             </svg>
         </button>
+        <button type="button" class="header-button-second">Buy now</button>
 </div>
     
