По хедеру выполнено все кроме анимации и иконок мобильного меню

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,7 +4,7 @@
         <div class="menu-container" id="menu-container" data-menu>
             <nav class="header-navigation">
                 <ul class="header-navigation-list">
-                    <li class="header-navigation-list-item"><a href="" class="header-navigation-link">Home</a></li>
+                    <li class="header-navigation-list-item"><a href="" class="header-navigation-link__action">Home</a></li>
                     <li class="header-navigation-list-item"><a href="" class="header-navigation-link">About us</a></li>
                     <li class="header-navigation-list-item"><a href="" class="header-navigation-link">How it’s made?</a></li>
                     <li class="header-navigation-list-item"><a href="" class="header-navigation-link">Our products</a></li>
