Оформление секции hero (требуются небольшие правки)

--- a/src/partials/hero_header.html
+++ b/src/partials/hero_header.html
@@ -1,4 +1,5 @@
 <section class="section hero">
+    <div class="menu">menu</div>
   <div class="container container__hero">
     <div class="hero__wrap">
       <h1 class="hero__title">
@@ -6,10 +7,16 @@
         made with <br />
         <span class="hero__title-accent">passion</span>
       </h1>
-      <a href="#" class="btn hero__btn">Products</a>
-      <a href="#" class="btn btn--invert hero__btn">How it’s made?</a>
-      
-    <picture class="hero__image-milk">
+      <ul class="hero__btn-list list">
+        <li class="hero__btn-list-item">
+          <a href="#prodacts" class="btn hero__btn">Products</a>
+        </li>
+        <li class="hero__btn-list-item">
+          <a href="#about" class="btn btn--invert hero__btn">How it’s made?</a>
+        </li>
+      </ul>
+      <div class="hero__bottom-block">
+        <picture class="hero__image-milk">
       <source
         media="(min-width: 1200px)"
         srcset="
@@ -25,11 +32,16 @@
         "
       />
 
-      <img src="./images/hero-header/tablet/milk-tablet.png" alt="icecream" />
-    </picture>
+      <img src="./images/hero-header/tablet/milk-tablet.png" alt="milk" />
+        </picture>
+        <div class="hero__more">
+          <p class="hero__more-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+          <button class="btn btn--more hero__btn-more"></button>
+        </div>
+      </div>
     </div>
 
-    <picture class="hero__image">
+    <picture class="hero__image-icecream">
       <source
         media="(min-width: 1200px)"
         srcset="
@@ -64,5 +76,25 @@
         <div class="hero__counter-num">23</div>
         <div class="hero__counter-label">food trucks</div>
       </div>
+
+      
+      <picture class="hero__image-tasty">
+      <source
+        media="(min-width: 1200px)"
+        srcset="
+          ./images/hero-header/desktop/tasty-desktop.png    1x,
+          ./images/hero-header/desktop/tasty-desktop@2x.png 2x
+        "
+      />
+      <source
+        media="(min-width: 768px)"
+        srcset="
+          ./images/hero-header/tablet/tasty-tablet.png    1x,
+          ./images/hero-header/tablet/tasty-tablet@2x.png 2x
+        "
+      />
+
+      <img src="./images/hero-header/tablet/tasty-tablet.png" alt="girl" />
+        </picture>
   </div>
 </section>
