--- a/src/sass/utils/_vars.scss
+++ b/src/sass/utils/_vars.scss
@@ -8,7 +8,7 @@ $desktop-sz: 1200px;
 
 // Шрифты
 $main-font: 'DMSans', sans-serif;
-$secondary-font: 'TitanOne', sans-serif;
+$secondary-font: 'TitanOne', cursive;
 
 // Цвета
 $primary-text-color: #ffffff;
@@ -20,14 +20,14 @@ $secondary-accent-color: #ffa5ba;
 
 $primary-body-color: #ffffff;
 $secondary-body-color: #fff5f6;
-$third-body-color: #E5E5E5;
+$third-body-color: #e5e5e5;
 
 $first-bg-color: #ffb8ca;
 $second-bg-color: #f0d1a5;
 $third-bg-color: #c2e297;
 $comments-bg-color: #fafafa;
 $side-menu-bg-color: #e17992;
-$pseudo-element-color: #E1E1E1;
+$pseudo-element-color: #e1e1e1;
 
 // Переход
 $transition-style: 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -126,9 +126,7 @@ $transition-style: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 // $side-menu-bg-color: #E17992; - используется:
 // - background для меню навигации на мобилке и планшете.
 
-
 //  ________________________________________________________
-//  $pseudo-element-color: #E1E1E1; - используется: 
+//  $pseudo-element-color: #E1E1E1; - используется:
 //  - секция Contact цвет полос подчеркивания.
 //  ________________________________________________________
- 
