--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,1 +1,22 @@
-<section class="section"><div class="container">gallery</div></section>
+<section class="section gallery">
+  <div class="container">
+    <picture class="gallery__image">
+      <source
+        media="(min-width: 1200px)"
+        srcset="
+          ./images/gallery/desktop/gallery-desktop.png    1x,
+          ./images/gallery/desktop/gallery-desktop@2x.png 2x
+        "
+      />
+      <source
+        media="(min-width: 768px)"
+        srcset="
+          ./images/gallery/tablet/gallery-tablet.png    1x,
+          ./images/gallery/tablet/gallery-tablet@2x.png 2x
+        "
+      />
+
+      <img src="./images/gallery/desktop/gallery-desktop.png" alt="gallery" />
+    </picture>
+  </div>
+</section>
