--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -9,21 +9,21 @@
                 <ul class="footer__list">
                     <li class="footer__list-item list">
                         <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
-                            <svg width="34" height="34">
+                            <svg class="footer__list-item-svg" width="34" height="34">
                                 <use href="./images/sprite.svg#icon-github"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer__list-item list">
-                        <a href="https://telegram.org/" target="_blank" rel="noopener noreferrer">
-                            <svg width="34" height="34">
+                        <a href="https://telegram.org/" class="footer__list-item-link" target="_blank" rel="noopener noreferrer">
+                            <svg class="footer__list-item-svg" width="34" height="34">
                                 <use href="./images/sprite.svg#icon-telegram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer__list-item list">
                         <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
-                            <svg width="34" height="34">
+                            <svg class="footer__list-item-svg" width="34" height="34">
                                 <use href="./images/sprite.svg#icon-facebook"></use>
                             </svg>
                         </a>
