Под экран мобилки

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,11 +1,12 @@
 <section class="footer section">
-    <div>
+    <div class="footer__top">
         <div class="container">
-            <div class="footer__title">
+            <div class="footer__box">
+            <div class="footer__title-box">
                 <p class="footer__first-title">homemade ice cream made</p>
                 <p class="footer__second-title">with passion</p>
             </div>
-            <div>
+            <div class="footer__list-box">
                 <ul class="footer__list">
                     <li class="footer__list-item list">
                         <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
@@ -29,14 +30,15 @@
                         </a>
                     </li>
                 </ul>
-            <p class="footer__contact">Feel free to contact <a href="tel:+610383766284"> +61 (0) 383 766 284</a></p>
+            <p class="footer__contact">Feel free to contact <a href="tel:+610383766284" class="footer__contact-link link"> +61 (0) 383 766 284</a></p>
+            </div>
             </div>
         </div>
     </div>
     <div>
         <div class="container">
-            <div>
-                <p>© 2019 - IceCream. All Rights Reserved.</p>
+            <div class="footer__bottom">
+                <p class="footer__property">© 2019 - IceCream. All Rights Reserved.</p>
             </div>
         </div>
     </div>
