--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -1,13 +1,106 @@
 .footer {
   background-color: $secondary-body-color;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.footer__box {
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
+}
+
+.footer__top {
+  border-bottom: 1px solid #e1e1e1;
+}
+
+.footer__title-box {
+  @media screen and (min-width: 768px) {
+    margin-right: auto;
+  }
+}
+
+.footer__first-title {
+  font-family: $secondary-font;
+  font-size: 18px;
+  line-height: 1.17;
+  text-transform: uppercase;
+  color: $secondary-accent-color;
+  width: 232px;
+}
+
+.footer__second-title {
+  font-family: $secondary-font;
+  font-size: 34px;
+  line-height: 1.15;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: $primary-accent-color;
+  width: 200px;
+
+  margin-top: 17px;
+}
+
+.footer__list-box {
+  margin-top: 43px;
+  margin-bottom: 43px;
+}
+
+.footer__list {
+  display: flex;
+  justify-content: flex-end;
+  margin: 0;
+  padding: 0;
+}
+
+.footer__list-item:not(:first-child) {
+  margin-left: 29px;
 }
 
 .footer__list-item-link {
+  width: 34px;
+  height: 34px;
   border-radius: 50%;
 }
 
 .footer__list-item-svg {
-  width: 34px;
-  height: 34px;
-  fill: tomato;
+  fill: #fea5bb;
+}
+
+.footer__contact {
+  font-family: $main-font;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 1.86;
+  text-align: right;
+  color: $secondary-text-color;
+
+  margin-top: 46px;
+}
+
+.footer__contact-link {
+  font-family: $main-font;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 1.86;
+  text-align: right;
+
+  color: $primary-accent-color;
+}
+
+.footer__bottom {
+  margin-top: 22px;
+  margin-bottom: 25px;
+}
+
+.footer__property {
+  font-family: $main-font;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.52;
+  text-align: center;
+  color: $third-text-color;
+  width: 150px;
+  margin-left: auto;
+  margin-right: auto;
 }
