Добавил экран планшета

--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -7,11 +7,18 @@
 .footer__box {
   @media screen and (min-width: 768px) {
     display: flex;
+    padding-left: 2px;
+    padding-right: 2px;
   }
 }
 
 .footer__top {
   border-bottom: 1px solid #e1e1e1;
+
+  @media screen and (min-width: 768px) {
+    padding-top: 45px;
+    padding-bottom: 91px;
+  }
 }
 
 .footer__title-box {
@@ -27,6 +34,13 @@
   text-transform: uppercase;
   color: $secondary-accent-color;
   width: 232px;
+
+  @media screen and (min-width: 768px) {
+    font-size: 26px;
+    line-height: 1.15;
+    letter-spacing: 0.04em;
+    width: 340px;
+  }
 }
 
 .footer__second-title {
@@ -39,11 +53,22 @@
   width: 200px;
 
   margin-top: 17px;
+
+  @media screen and (min-width: 768px) {
+    font-size: 48px;
+    letter-spacing: 0.06em;
+    width: 340px;
+  }
 }
 
 .footer__list-box {
   margin-top: 43px;
   margin-bottom: 43px;
+
+  @media screen and (min-width: 768px) {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
 }
 
 .footer__list {
@@ -76,6 +101,10 @@
   color: $secondary-text-color;
 
   margin-top: 46px;
+
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+  }
 }
 
 .footer__contact-link {
@@ -91,6 +120,11 @@
 .footer__bottom {
   margin-top: 22px;
   margin-bottom: 25px;
+
+  @media screen and (min-width: 768px) {
+    margin-top: 29px;
+    margin-bottom: 18px;
+  }
 }
 
 .footer__property {
@@ -103,4 +137,10 @@
   width: 150px;
   margin-left: auto;
   margin-right: auto;
+
+  @media screen and (min-width: 768px) {
+    line-height: 1.86;
+    letter-spacing: 0.02em;
+    width: 276px;
+  }
 }
