--- a/src/sass/layouts/_contacts.scss
+++ b/src/sass/layouts/_contacts.scss
@@ -1,30 +1,40 @@
 .contact-section {
-    
-    @media  screen and (max-width: 767px) {
-   
-    background-image: linear-gradient($third-body-color 12%, $secondary-body-color 12%);
-    }
+    font-family: $main-font;
+    font-style: normal;
+    font-weight: 500;
+
+    max-width: 1600px;
+
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;    
+
+    @media screen and (max-width: 767px) {    
+     
+    background-image: linear-gradient($primary-body-color 12%, $secondary-body-color 12%);
+        }
 
     @include for-tablet {
-        background-image: linear-gradient($third-body-color 27%, $secondary-body-color 27%);
+        background-image: linear-gradient($primary-body-color 27%, $secondary-body-color 27%);
     }
 
     @include for-desktop {
-        background-image: linear-gradient($third-body-color 28%, $secondary-body-color 28%);
-    }    
-    
+              
+        background-image: url(/images/contact/desktop/contact-bg.png), linear-gradient($primary-body-color 28%, $secondary-body-color 28%);
+        
+        @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {      
+            background-image: url(/images/contact/desktop/contact-bg@2x.png), linear-gradient($primary-body-color 28%, $secondary-body-color 28%);
+        }  
+    }      
 }
 
 
 .contact-list {
- @include for-tablet {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: -30px;
-    margin-bottom: -30px;
- } 
+    @include for-tablet {
+    
+        @include card-set-list (30px); 
+    }
 }
-
 
 .contact-item:not(:last-child) {
  @media  screen and (max-width: 767px) {
@@ -44,7 +54,6 @@
     }
 }
 
-
 .contact-card {
     margin-left: auto;
     margin-right: auto;
@@ -55,10 +64,8 @@
 
     @media  screen and (max-width: 767px) {
         width: 220px;
-    }
-   
+    }   
 }
-
 
 .contact-card__name {
     display: inline-block;
@@ -69,11 +76,10 @@
     border-radius: 4px;
     text-transform: uppercase;
     text-align: center;
-
-    font-weight: 500;
+      
     font-size: 12px;
     line-height: 1.86;
-    letter-spacing: 4%;
+    
     color: $primary-text-color;
 
     &--cafe {
@@ -91,8 +97,7 @@
     margin-bottom: 10px;
 
     color: $secondary-text-color;
-    font-style: normal;
-    font-weight: 500;
+    
     font-size: 12px;
     line-height: 1.83;
     letter-spacing: 0.04em;
@@ -103,8 +108,7 @@
     margin-top: 0;
     margin-bottom: 25px;
     position: relative;
-    font-style: normal;
-    font-weight: 500;
+     
     font-size: 12px;
     line-height: 1.5;
     color: $third-text-color;
@@ -131,8 +135,7 @@
     position: absolute;
     margin-top: 25px;
     width: 100%;
-    border: 1px solid $pseudo-element-color;
-    
+    border: 1px solid $pseudo-element-color;    
 
 }
 
@@ -145,39 +148,29 @@
 }
 
 
-
 .contact-card__work-time--days {
     display: block;
-
-    font-weight: 500;
+    
     font-size: 12px;
-    line-height: 1.83;
-         
+    line-height: 1.83;         
     color: $secondary-text-color;
 }
 
 
-.contact-card__work-time--hours {
-    
-
-    font-style: normal;
-    font-weight: 500;
+.contact-card__work-time--hours {      
     font-size: 12px;
     line-height: 1.83;
-
     color: $secondary-accent-color ;
 }
 
 
 .contact-link-list {
     margin-top: 25px;
-   
-
 }
 
 .contact-link {
     text-decoration: none;
-    font-weight: 500;
+    
     font-size: 12px;
     line-height: 1.5;
     color: $third-text-color;
@@ -189,10 +182,8 @@
         justify-content: center;
         align-items: center;
         margin-top: 120px;
-
     }
 }
-
 
 .contact-btn {
     display: block;  
