--- a/src/sass/utils/_mixins.scss
+++ b/src/sass/utils/_mixins.scss
@@ -1,3 +1,11 @@
+// Миксин для набора карточек, задаем на список
+@mixin card-set-list ($num) {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: calc(#{$card-magrin} * -1);
+  margin-top: calc(#{$card-magrin} * -1);
+}
+
 // Миксин для набора карточек, задаем на элемент списка
 @mixin card-set($num) {
   flex-basis: calc(100% / #{$num} - #{$card-magrin});
