Нормально сделана анимация мобильного меню

--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -6,6 +6,14 @@ ul {
   margin: 0;
 }
 
+li {
+  margin: 0;
+}
+
+a {
+  margin: 0;
+}
+
 .header {
   @extend .container;
   position: relative;
@@ -65,7 +73,6 @@ ul {
 }
 
 .menu-container {
-  // display: none;
   position: absolute;
   overflow: hidden;
   top: 0;
@@ -83,10 +90,6 @@ ul {
 
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     width: 254px;
-  }
-
-  @media screen and (max-width: 1199px) {
-    height: 100vh;
   }
 
   @media screen and (min-width: 1200px) {
@@ -149,6 +152,9 @@ ul {
   list-style-type: none;
   padding: 0;
   margin-top: 21px;
+  @media screen and (max-width: 1199px) {
+    margin-bottom: 100vh;
+  }
 
   @media screen and (min-width: 1200px) {
     display: flex;
