Добавляются стили для заголовков секций под разные дисплеи

--- a/src/sass/utils/_utils-classes.scss
+++ b/src/sass/utils/_utils-classes.scss
@@ -28,22 +28,44 @@
 
 .section__title {
   font-family: $secondary-font;
-  font-size: 58px;
-  line-height: 1.14;
-  text-align: center;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  color: $primary-accent-color;
-}
-
-.section__subtitle {
-  font-family: $secondary-font;
-  font-size: 30px;
-  line-height: 1.13;
+  font-size: 34px;
+  line-height: 1.15;
   text-align: center;
   letter-spacing: 0.04em;
   text-transform: uppercase;
+  color: $primary-accent-color;
+
+  @include for-tablet {
+    font-size: 49px;
+    line-height: 1.46;
+  }
+
+  @include for-desktop {
+    font-size: 58px;
+    line-height: 1.14;
+    letter-spacing: 0.06em;
+  }
+}
+
+.section__subtitle {
+  margin-bottom: 15px;
+
+  font-family: $secondary-font;
+  font-size: 18px;
+  line-height: 1.17;
+  text-align: center;
+  text-transform: uppercase;
   color: $secondary-accent-color;
+
+  @include for-tablet {
+    font-size: 26px;
+    line-height: 1.15;
+  }
+
+  @include for-desktop {
+    font-size: 30px;
+    line-height: 1.13;
+  }
 }
 
 .container {
