--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -13,9 +13,9 @@
         <button type="button" class="header-button">Buy now</button>
     </div>
     <button type="button" class="menu-button is-open" data-menu-button>
-        <svg class="" width="20" height="12" aria-label="Переключатель мобильного меню">
-            <use href="./images/sprite.svg#icon-menu" class="icon-menu"></use>
-            <use href="./images/sprite.svg#icon-close" class="icon-close"></use>
+        <svg class="menu-button-icon" width="20" height="12" aria-label="Переключатель мобильного меню">
+            <use href="./images/sprite.svg#icon-menu" class="icon-menu" ></use>
+            <use href="./images/sprite.svg#icon-close" class="icon-close" ></use>
         </svg>
     </button>
     <button type="button" class="header-button-second">Buy now</button>
