--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -1,6 +1,6 @@
-* {
-  outline: 1px solid #000;
-}
+// * {
+//   outline: 1px solid #000;
+// }
 
 ul {
   margin: 0;
@@ -19,8 +19,6 @@ a {
   position: relative;
   padding-top: 6px;
   padding-bottom: 6px;
-  background-color: tomato;
-
   @media screen and (min-width: 768px) {
     display: flex;
   }
@@ -35,6 +33,8 @@ a {
   top: 19px;
   right: 20px;
   z-index: 3;
+  border: none;
+  background-color: transparent;
 
   @media screen and (min-width: 768px) {
     display: block;
@@ -57,12 +57,16 @@ a {
   }
 }
 
-.menu-button .icon-close {
+.menu-button .icon-menu {
   display: none;
 }
 
-.menu-button.is-open .icon-close {
+.menu-button.is-open .icon-menu {
   display: block;
+}
+
+.menu-button.is-open .icon-close {
+  display: none;
 }
 
 .menu-button.is-open {
@@ -226,4 +230,16 @@ a {
     color: #d41443;
     margin-left: 21px;
   }
+
+  &:hover {
+    color: #d41443;
+  }
+}
+
+.icon-menu {
+  stroke: #d41443;
+}
+
+.icon-close {
+  stroke: #fff;
 }
