--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -9,7 +9,7 @@
             <div class="footer__list-box">
                 <ul class="footer__list">
                     <li class="footer__list-item list">
-                        <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                        <a href="https://github.com/" class="footer__list-item-link" target="_blank" rel="noopener noreferrer">
                             <svg class="footer__list-item-svg" width="34" height="34">
                                 <use href="./images/sprite.svg#icon-github"></use>
                             </svg>
@@ -23,7 +23,7 @@
                         </a>
                     </li>
                     <li class="footer__list-item list">
-                        <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                        <a href="https://www.facebook.com/" class="footer__list-item-link" target="_blank" rel="noopener noreferrer">
                             <svg class="footer__list-item-svg" width="34" height="34">
                                 <use href="./images/sprite.svg#icon-facebook"></use>
                             </svg>
