поправив font-size

--- a/src/sass/layouts/_contacts.scss
+++ b/src/sass/layouts/_contacts.scss
@@ -1,8 +1,4 @@
 .contact-section {
-    font-family: $main-font;
-    font-style: normal;
-    font-weight: 500;
-
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;    
@@ -79,6 +75,9 @@
     line-height: 1.86;
     
     color: $primary-text-color;
+    @include for-tablet {
+      font-size: 16px;
+    }
 
     &--cafe {
         background-color: $second-bg-color;
@@ -99,6 +98,12 @@
     font-size: 12px;
     line-height: 1.83;
     letter-spacing: 0.04em;
+    @include for-tablet {
+        font-size: 14px;
+    }
+    @include for-desktop {
+        font-size: 16px;
+    }
 }
 
 .contact-card__text {
@@ -110,6 +115,12 @@
     font-size: 12px;
     line-height: 1.5;
     color: $third-text-color;
+    @include for-tablet {
+        font-size: 14px;
+    }
+    @include for-desktop {
+        font-size: 16px;
+    }
 }
 
 .contact-card__text::after {
@@ -152,13 +163,25 @@
     font-size: 12px;
     line-height: 1.83;         
     color: $secondary-text-color;
+    @include for-tablet {
+         font-size: 14px;
+    }
+    @include for-desktop {
+        font-size: 16px;
+    }
 }
 
 
 .contact-card__work-time--hours {      
     font-size: 12px;
     line-height: 1.83;
-    color: $secondary-accent-color ;
+    color: $secondary-accent-color;
+    @include for-tablet {
+        font-size: 14px;
+    }
+    @include for-desktop {
+        font-size: 16px;
+    }
 }
 
 
@@ -172,6 +195,12 @@
     font-size: 12px;
     line-height: 1.5;
     color: $third-text-color;
+    @include for-tablet {
+       font-size: 14px;
+    }
+    @include for-desktop {
+        font-size: 16px;
+    }
 }
 
 .btn-set {
