--- a/src/partials/hero_header.html
+++ b/src/partials/hero_header.html
@@ -1,5 +1,38 @@
 <section class="section hero">
-    <div class="menu">menu</div>
+  <header class="container header">
+    <img src="./images/logo.png" alt="логотип" class="logo" />
+    <div class="menu-container" id="menu-container" data-menu>
+
+      <nav class="header-navigation">
+
+        <ul class="header-navigation-list list">
+          <li class="header-navigation-list-item">
+            <a href="" class="header-navigation-link__action">Home</a>
+          </li>
+          <li class="header-navigation-list-item">
+            <a href="" class="header-navigation-link">About us</a>
+          </li>
+          <li class="header-navigation-list-item">
+            <a href="" class="header-navigation-link">How it’s made?</a>
+          </li>
+          <li class="header-navigation-list-item">
+            <a href="" class="header-navigation-link">Our products</a>
+          </li>
+          <li class="header-navigation-list-item">
+            <a href="" class="header-navigation-link">Contact</a>
+          </li>
+        </ul>
+      </nav>
+      <button type="button" class="header-button btn btn--arrow-invert">Buy now</button>
+    </div>
+    <button type="button" class="menu-button" data-menu-button>
+      <svg class="menu-button-icon" width="20" height="20" aria-label="Переключатель мобильного меню">
+        <use href="./images/sprite.svg#icon-menu" class="icon-menu"></use>
+        <use href="./images/sprite.svg#icon-close" class="icon-close"></use>
+      </svg>
+    </button>
+    <button type="button" class="header-button-second btn btn--arrow-invert">Buy now</button>
+  </header>
   <div class="container container__hero">
     <div class="hero__wrap">
       <h1 class="hero__title">
