--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -1,12 +1,3 @@
-.menu {
-  height: 100px;
-  display: none;
-
-  @include for-tablet {
-    display: block;
-  }
-}
-
 .hero {
   padding: 0;
   background-color: $first-bg-color;
@@ -38,6 +29,7 @@
   }
 
   @include for-desktop {
+    padding-top: 45px;
     padding-bottom: 45px;
   }
 }
