--- a/src/sass/utils/_mixins.scss
+++ b/src/sass/utils/_mixins.scss
@@ -29,3 +29,9 @@
     @content;
   }
 }
+
+@mixin for-phone-to-desktop {
+  @media screen and (min-width: $tablet-sz) and (max-width: #{$desktop-sz}-1) {
+    @content;
+  }
+}
