--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -100,9 +100,49 @@
         <div class="btn-set">
 
      
-        <button type="button" class="btn contact-btn btn--arrow">Our Locations </button>
-        <button type="button" class="btn contact-btn btn--arrow-invert">Franchise</button>
+        <button type="button" class="btn contact-btn btn--arrow" data-modal-open>Our Locations </button>
+        <button type="button" class="btn contact-btn btn--arrow-invert" data-modal-open2>Franchise</button>
 
+        </div>
+
+
+         <!-- модальное окно карти-->
+         <div class="backdrop is-hidden" data-modal>
+           
+           
+            <div class="modal">
+                <div class="mapouter">
+                    <div class="gmap_canvas">
+                        <iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=goit&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed">
+                        </iframe>
+                        <a href="https://www.bgmi.org/">BGMI</a>
+                    </div>
+                    <style>.mapouter{position:relative;text-align:right;width:100%;height:400px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:400px;}.gmap_iframe {height:400px!important;}
+                    </style>
+                    </div>
+            <button type="button" class="btn btn--arrow-invert btn-close__location" data-modal-close>Close</button>
+
+            </div>
+        </div>
+
+        <!-- модальное окно франшизы-->
+        <div class="backdrop is-hidden" data-modal2>
+                     
+            <div class="modal modal-franchise">
+                <h2 class="title title-franchise">Franchise Agreement</h2>
+                <p class="text-franchise">
+                    In a franchise agreement, a franchisor grants the franchisee the right to use the franchisor's system and proprietary marks to operate a franchised business. The agreement may be limited to a particular location, and also restrict the franchisor from locating another business nearby. The agreement should specify the franchise fee, which may include a fixed initial fee as well as ongoing monthly royalty payments. Franchisees should understand the term of the agreement, the provisions for renewing the agreement, as well as any restrictions on transferring the franchise.</p>
+            
+                 <div class="form__licence">
+                        <input class="form__checkbox visually-hidden" type="checkbox" name="agreement" id="comfirm"/>
+                        <label class="form__licence-label" for="comfirm">Accept all</label>
+                </div>        
+
+
+
+            <button type="button" class="btn btn--arrow-invert btn-close__location" data-modal-close2>Continue</button>
+
+            </div>
         </div>
 
      
