--- a/src/sass/layouts/_contacts.scss
+++ b/src/sass/layouts/_contacts.scss
@@ -1,4 +1,5 @@
 .contact-section {
+    font-family: $main-font;
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;    
@@ -232,3 +233,127 @@
     color: $primary-text-color;
 }
 
+/* модальное окно карти */
+
+.backdrop {
+ position: fixed;
+ top: 0;
+ left: 0;
+ width: 100%;
+ height: 100%;
+ z-index: 101;   
+ opacity: 1;
+ transition: opacity $transition-style;
+ background-image: linear-gradient(rgba(0,0,0,.3), rgba(0,0,0,.5));
+ overflow-y: scroll;
+}
+  
+.backdrop.is-hidden {
+ opacity: 0;
+ pointer-events: none;
+}
+  
+.modal {
+ padding: 15px 15px;
+ background-color: $secondary-body-color;
+ box-shadow: 0px 8px 30px 0px rgba(212, 20, 67, .1);
+ border-radius: 24px; 
+ position: absolute;
+ top: 100px;
+ left: 50%;
+ transform: translate(-50%);
+ width: 80%;   
+    @media screen and (min-width: 480px) and (max-width: 767px) {
+     width: 400px;
+    }
+    @include for-tablet {
+     width: 620px;   
+    }
+    @include for-desktop {
+        width: 1040px; 
+    }
+
+
+}
+
+.btn-close__location {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 15px;    
+}
+   
+
+/* модальное окно франшизы */
+.modal-franchise {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 14px;
+    padding-left: 30px;
+    padding-right: 30px;
+    
+    @media screen and (min-width: 480px) and (max-width: 767px) {
+        padding-top: 20px;
+        width: 400px;
+        
+    }
+    @include for-tablet {
+        padding-top: 40px;
+        padding-bottom: 40px;
+        width: 620px;
+        font-size: 16px;
+       
+    }
+}
+
+.title-franchise {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+}
+ 
+.form__licence {
+    margin-top: 20px;
+    margin-bottom: 30px;
+  }
+  
+  .form__licence-label {
+    display: inline-block;
+    letter-spacing: 0;
+    font-size: 12px;
+    line-height: 1.17;
+   
+      font-size: 14px;
+      display: flex;
+      align-items: center;
+      letter-spacing: 0.03em;
+      
+  }
+  
+  .form__licence-label::before {
+    content: "";
+    display: inline-block;
+    margin-right: 10px;
+
+    width: 15px;
+    height: 15px;
+
+    border: 1px solid black;
+    border-radius: 2px;
+  }
+  
+  .form__checkbox:checked + .form__licence-label::before {
+    background-image: url(/images/icon-check.svg);
+    background-color: $primary-accent-color;
+    border-color: $primary-text-color;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-origin: border-box;
+  }
+  
+  .form__link {
+    margin-left: 4px;
+    display: inline-block;
+    color: $third-text-color;
+  }
