--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,8 +1,8 @@
 
 <section id="products" class="section products">
   <div class="container">
-    <p class="products__label">100% natural</p>
-    <h2 class="products__title">products</h2>
+    <p class="section__subtitle">100% natural</p>
+    <h2 class="section__title">products</h2>
     <ul class="products__list list">
       <li class="products__item">
         <h3 class="products__name">ice cream</h3>
@@ -12,7 +12,7 @@
         </p>
         <button class="btn btn--more" type="button"></button>
         <div class="products__overlay is-hidden" data-product>
-          <p>
+          <p class="products__about">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus commodi qui laudantium illo praesentium ad tenetur unde rerum itaque asperiores.
           </p>
           <button class="btn btn--back" type="button" data-product-close></button>
@@ -26,7 +26,7 @@
         </p>
         <button class="btn btn--more" type="button"></button>
         <div class="products__overlay is-hidden" data-product>
-          <p>
+          <p class="products__about">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus commodi qui laudantium illo praesentium ad tenetur unde rerum itaque asperiores.
           </p>
           <button class="btn btn--back" type="button" data-product-close></button>
@@ -40,7 +40,7 @@
         </p>
         <button class="btn btn--more" type="button" data-product-open></button>
         <div class="products__overlay is-hidden" data-product>
-          <p>
+          <p class="products__about">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus commodi qui laudantium illo praesentium ad tenetur unde rerum itaque asperiores.
           </p>
           <button class="btn btn--back" type="button" data-product-close></button>
